# python-p2p

./: .gitignore  LICENSE  README.md  TODO.txt  connection.py  data_request_management.py  file_transfer.py  gui.py  main.py  node.py  portforwardlib.py  pyproject.toml  requirements.txt  resources.json  resources0.json  setup.py  state.json
.github/workflows/: python-package.yml
content/: test.txt
p2pnetwork/: node.py  nodeconnection.py  securenode.py
pythonp2p/: __init__.py  __main__.py  crypto_funcs.py  data_request_management.py  file_transfer.py  node.py  portforwardlib.py
pythonp2p/tests/: test_node.py
tests/: files_test.py  tests.py
